JobsAddon compat